index에 link 태그 한줄 추가하고 CSS1.css 파일 만들었음

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	
+	<link rel="stylesheet" href="CSS1.css"> <!-- CSS1.css를 읽도록 하는 링크 태그 추가  -->
 	<style>
 		h1 {
 			color: red;
